<resources>
    <string name="app_name">NotesAPI-Omelko</string>
    <string name="msgLoginSucceed">Login succeed.</string>
    <string name="msgIncorrectLoginPassword">Login or password is uncorrected.</string>
    <string name="msgIncorrectPassword">Password is uncorrected.</string>
    <string name="msgIncorrectName">Name is uncorrected.</string>
    <string name="msgDeleteAccount">Account will be permanently deleted!</string>
    <string name="msgNothingSelected">Nothing selected</string>
    <string name="msgSure">Are you sure?</string>
    <string name="msgSure2">Changes not saved</string>
    <string name="msgRequestFailed">Request failed.</string>
    <string name="msgInvalidToken">Invalid token.</string>
    <string name="msgPleaseSignIn">Please sign in.</string>
    <string name="msgUnexpectedError">Unexpected error.</string>
    <string name="btnLogin">Sign in</string>
    <string name="btnOk">OK</string>
    <string name="btnTags">Tags</string>
    <string name="btnColor">Color</string>
    <string name="btnNewTag">New Tag</string>
    <string name="btnEditTag">Edit</string>
    <string name="btnRenameTag">Rename</string>
    <string name="btnDeleteTag">Delete</string>
    <string name="btnNotes">Notes</string>
    <string name="btnSelectNotes">Select</string>
    <string name="btnNewNote">New note</string>
    <string name="btnDeleteNote">Delete</string>
    <string name="btnBack">Back</string>
    <string name="btnAccountDelete">Delete account</string>
    <string name="btnChangePassword">Change password</string>
    <string name="btnLogOut">Logout</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnRegister">Sign up</string>
    <string name="btnSetting">Settings</string>
    <string name="btnNoteList">List of Notes</string>
    <string name="swtRemPas">Remember</string>
    <string name="tvLogin">Login:</string>
    <string name="tvPassword">Password:</string>
    <string name="tvSignInTitle">Authorization</string>
    <string name="txtCSTR">Connection string</string>
    <string name="txtOk">Ok</string>
    <string name="txtApply">Apply</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtInfo">Info</string>
    <string name="txtError">Error</string>
    <string name="txtWarning">Warning</string>
    <string name="txtValue">Value:</string>
    <string name="txtMenu">Menu</string>
    <string name="txtAccount">Account:</string>
    <string name="txtToken">Token:</string>
    <string name="txtNewPassword">New tag:</string>
    <string name="txtNotes">Notes</string>
    <string name="txtNote1">Note</string>
    <string name="txtNote">Note</string>
    <string name="txtSelected">Selected</string>
    <string name="txtTags">Tags</string>
    <string name="txtTag">Tag:</string>
    <string name="txtNodes">Nodes:</string>
    <string name="txtID">ID:</string>
    <string name="txtSaveOnServer">Save on server</string>
    <string name="txtSaveOnDB">Save on device</string>
    <string name="txtNewName">New name</string>
    <string name="txtNewNameNote">New empty note</string>
    <string name="tvLinkSettingAldHeader">Links settings</string>
    <string name="txtColors">Colors</string>
</resources>