<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHeaderNoteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btnNotes"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spnTagsNoteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSNTNoteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtNote" />

        <TextView
            android:id="@+id/tvSelectedNoteNoteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBackNoteList"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onBtnBackClick"
                android:text="@string/btnBack" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>