<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeaderSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btnRegister"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLoginSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Login"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOkSignUp"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:onClick="onBtnOkClick"/>

    <Button
        android:id="@+id/btnCancelSignUp"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:onClick="onBtnCancelClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRememberSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/swtRemPas" />

        <Switch
            android:id="@+id/swtRememberSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</LinearLayout>